// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor renders correctly 1`] = `
<a
  aria-label={undefined}
  className={undefined}
  href={undefined}
  onClick={undefined}
  tabIndex={0}
  target={undefined}
  title={undefined}
/>
`;

exports[`Anchor renders correctly 2`] = `
<a
  aria-label={undefined}
  className={undefined}
  href={undefined}
  onClick={undefined}
  tabIndex={0}
  target={undefined}
  title={undefined}
>
  <span>
    testing 123
  </span>
  <div>
    testing456
  </div>
</a>
`;

exports[`Anchor renders correctly with ARIA-label 1`] = `
<a
  aria-label="anchor text as ARIA-label"
  className={undefined}
  href={undefined}
  onClick={undefined}
  tabIndex={0}
  target={undefined}
  title={undefined}
>
  anchor text as ARIA-label
</a>
`;

exports[`Anchor renders correctly with ARIA-label 2`] = `
<a
  aria-label="ARIA-label"
  className={undefined}
  href={undefined}
  onClick={undefined}
  tabIndex={0}
  target={undefined}
  title={undefined}
>
  anchor text, not ARIA
</a>
`;

exports[`Anchor renders correctly with ARIA-label 3`] = `
<a
  aria-label="title shown as ARIA-label"
  className={undefined}
  href={undefined}
  onClick={undefined}
  tabIndex={0}
  target={undefined}
  title="title shown as ARIA-label"
>
  anchor text, not ARIA
</a>
`;

exports[`Anchor renders correctly with ARIA-label 4`] = `
<a
  aria-label="ariaLabel shown as ARIA-label"
  className={undefined}
  href={undefined}
  onClick={undefined}
  tabIndex={0}
  target={undefined}
  title="this should not be shown as ARIA-label"
>
  anchor text, not ARIA
</a>
`;

exports[`Anchor renders correctly with ARIA-label 5`] = `
<a
  aria-label="title shown as ARIA-label"
  className={undefined}
  href={undefined}
  onClick={undefined}
  tabIndex={0}
  target={undefined}
  title="title shown as ARIA-label"
>
  <span>
    testing 123
  </span>
  <div>
    testing456
  </div>
</a>
`;

exports[`Anchor renders correctly with ARIA-label 6`] = `
<a
  aria-label="ariaLabel shown as ARIA-label"
  className={undefined}
  href={undefined}
  onClick={undefined}
  tabIndex={0}
  target={undefined}
  title={undefined}
>
  <span>
    testing 123
  </span>
  <div>
    testing456
  </div>
</a>
`;

exports[`Anchor renders correctly with CSS class 1`] = `
<a
  aria-label="test anchor"
  className="css-class-name"
  href={undefined}
  onClick={undefined}
  tabIndex={0}
  target={undefined}
  title={undefined}
>
  test anchor
</a>
`;

exports[`Anchor renders correctly with href 1`] = `
<a
  aria-label="test anchor"
  className={undefined}
  href="https://fd.nl"
  onClick={undefined}
  tabIndex={0}
  target={undefined}
  title={undefined}
>
  test anchor
</a>
`;

exports[`Anchor renders correctly with tabIndex 1`] = `
<a
  aria-label="test anchor"
  className={undefined}
  href={undefined}
  onClick={undefined}
  tabIndex="2"
  target={undefined}
  title={undefined}
>
  test anchor
</a>
`;

exports[`Anchor renders correctly with tabIndex 2`] = `
<a
  aria-label="test anchor"
  className={undefined}
  href={undefined}
  onClick={undefined}
  tabIndex="-1"
  target={undefined}
  title={undefined}
>
  test anchor
</a>
`;
